@@ -15,6 +15,11 @@
 	<description>Dockerizing a Spring Boot application</description>
 	<properties>
 		<java.version>17</java.version>
+		<docker.image.name>tonghoangvu/spring-boot-dockerizing:cnb-jdk</docker.image.name>
+		<bp.jvm.version>17</bp.jvm.version>
+		<bp.jvm.type>JDK</bp.jvm.type>
+		<bp.jvm.jlink.enabled>false</bp.jvm.jlink.enabled>
+		<bp.jvm.jlink.args>--add-modules java.se --strip-debug --no-man-pages --no-header-files --compress=2</bp.jvm.jlink.args>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -36,6 +41,28 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+						<name>${docker.image.name}</name>
+						<env>
+							<BP_JVM_VERSION>${bp.jvm.version}</BP_JVM_VERSION>
+							<BP_JVM_TYPE>${bp.jvm.type}</BP_JVM_TYPE>
+							<BP_JVM_JLINK_ENABLED>${bp.jvm.jlink.enabled}</BP_JVM_JLINK_ENABLED>
+							<BP_JVM_JLINK_ARGS>${bp.jvm.jlink.args}</BP_JVM_JLINK_ARGS>
+						</env>
+						<pullPolicy>IF_NOT_PRESENT</pullPolicy>
+						<buildCache>
+							<volume>
+								<name>cache-${project.artifactId}.build</name>
+							</volume>
+						</buildCache>
+						<launchCache>
+							<volume>
+								<name>cache-${project.artifactId}.launch</name>
+							</volume>
+						</launchCache>
+					</image>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
